--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -62,8 +62,16 @@
     </property>
     <addaction name="actionExpand_All"/>
    </widget>
+   <widget class="QMenu" name="menuView">
+    <property name="title">
+     <string>&amp;View</string>
+    </property>
+    <addaction name="actionCall_Tree"/>
+    <addaction name="actionReverse_Call_Tree"/>
+   </widget>
    <addaction name="menuFile"/>
    <addaction name="menuEdit"/>
+   <addaction name="menuView"/>
   </widget>
   <widget class="QToolBar" name="mainToolBar">
    <attribute name="toolBarArea">
@@ -93,6 +101,22 @@
   <action name="actionExpand_All">
    <property name="text">
     <string>Expand &amp;All</string>
+   </property>
+  </action>
+  <action name="actionCall_Tree">
+   <property name="text">
+    <string>&amp;Call Tree</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+T</string>
+   </property>
+  </action>
+  <action name="actionReverse_Call_Tree">
+   <property name="text">
+    <string>&amp;Reverse Call Tree</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+R</string>
    </property>
   </action>
  </widget>
