--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -102,6 +102,9 @@
    <property name="text">
     <string>Expand &amp;All</string>
    </property>
+   <property name="shortcut">
+    <string>Ctrl+E</string>
+   </property>
   </action>
   <action name="actionCall_Tree">
    <property name="text">
