implement all instances action

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -17,6 +17,9 @@
    <layout class="QVBoxLayout" name="verticalLayout">
     <item>
      <widget class="QTreeWidget" name="treeWidget">
+      <property name="selectionMode">
+       <enum>QAbstractItemView::ExtendedSelection</enum>
+      </property>
       <property name="sortingEnabled">
        <bool>true</bool>
       </property>
@@ -78,6 +81,8 @@
     </property>
     <addaction name="actionCall_Tree"/>
     <addaction name="actionReverse_Call_Tree"/>
+    <addaction name="action"/>
+    <addaction name="actionAll_Instances"/>
    </widget>
    <addaction name="menuFile"/>
    <addaction name="menuEdit"/>
@@ -130,6 +135,19 @@
    </property>
    <property name="shortcut">
     <string>Ctrl+R</string>
+   </property>
+  </action>
+  <action name="action">
+   <property name="text">
+    <string>-</string>
+   </property>
+  </action>
+  <action name="actionAll_Instances">
+   <property name="text">
+    <string>All Instances</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+G</string>
    </property>
   </action>
  </widget>
