introduce undo action

--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -73,6 +73,7 @@
     <property name="title">
      <string>&amp;Edit</string>
     </property>
+    <addaction name="actionUndo"/>
     <addaction name="actionExpand_All"/>
    </widget>
    <widget class="QMenu" name="menuView">
@@ -148,6 +149,14 @@
    </property>
    <property name="shortcut">
     <string>Ctrl+G</string>
+   </property>
+  </action>
+  <action name="actionUndo">
+   <property name="text">
+    <string>&amp;Undo</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+Z</string>
    </property>
   </action>
  </widget>
