--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -74,6 +74,7 @@
      <string>&amp;Edit</string>
     </property>
     <addaction name="actionUndo"/>
+    <addaction name="actionRedo"/>
     <addaction name="actionExpand_All"/>
    </widget>
    <widget class="QMenu" name="menuView">
@@ -157,6 +158,14 @@
    </property>
    <property name="shortcut">
     <string>Ctrl+Z</string>
+   </property>
+  </action>
+  <action name="actionRedo">
+   <property name="text">
+    <string>&amp;Redo</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+Shift+Z</string>
    </property>
   </action>
  </widget>
